src/diagrams/snapshots/avalanche_report__diagrams__aspect_elevation__test__generate_svg_alpine_n_w.snap
---
source: src/diagrams/aspect_elevation.rs
expression: svg
---
<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!-- Created with Inkscape (http://www.inkscape.org/) -->

<svg
   width="400"
   height="400"
   viewBox="0 0 105.83333 105.83334"
   version="1.1"
   id="svg5"
   xmlns="http://www.w3.org/2000/svg"
   xmlns:svg="http://www.w3.org/2000/svg">
  <defs
     id="defs2">
    <filter
       style="color-interpolation-filters:sRGB;"
       id="filter14548"
       x="-0.095868998"
       y="-0.096180303"
       width="1.2423246"
       height="1.2416241">
      <feFlood
         flood-opacity="0.498039"
         flood-color="rgb(0,0,0)"
         result="flood"
         id="feFlood14538" />
      <feComposite
         in="flood"
         in2="SourceGraphic"
         operator="in"
         result="composite1"
         id="feComposite14540" />
      <feGaussianBlur
         in="composite1"
         stdDeviation="3"
         result="blur"
         id="feGaussianBlur14542" />
      <feOffset
         dx="4.11163"
         dy="4.03958"
         result="offset"
         id="feOffset14544" />
      <feComposite
         in="SourceGraphic"
         in2="offset"
         operator="over"
         result="composite2"
         id="feComposite14546" />
    </filter>
    <filter
       style="color-interpolation-filters:sRGB;"
       id="filter14608"
       x="-0.095868998"
       y="-0.096180303"
       width="1.2423246"
       height="1.2416241">
      <feFlood
         flood-opacity="0.498039"
         flood-color="rgb(0,0,0)"
         result="flood"
         id="feFlood14598" />
      <feComposite
         in="flood"
         in2="SourceGraphic"
         operator="in"
         result="composite1"
         id="feComposite14600" />
      <feGaussianBlur
         in="composite1"
         stdDeviation="3"
         result="blur"
         id="feGaussianBlur14602" />
      <feOffset
         dx="4.11163"
         dy="4.03958"
         result="offset"
         id="feOffset14604" />
      <feComposite
         in="SourceGraphic"
         in2="offset"
         operator="over"
         result="composite2"
         id="feComposite14606" />
    </filter>
  </defs>
  <g
     id="layer1">
    <g
       id="g31088"
       transform="translate(0.18364702,-0.51634072)">
      <g
         id="g13171-2-0"
         transform="matrix(1.0255827,0,0,1.0255827,-1.2904195,-0.54032355)">
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 40.442995,20.357528 53.614589,52.089988 66.790797,20.357528 53.616896,11.420351 40.442995,20.357528"
           id="sub-alpine-n" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 66.778614,20.311096 53.6541,52.063057 85.409324,38.941805 82.413508,23.306912 66.778614,20.311096"
           id="sub-alpine-ne" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 85.433542,38.900358 53.701082,52.071952 85.433542,65.24816 94.37072,52.074259 85.433542,38.900358"
           id="sub-alpine-e" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 85.467937,65.323853 53.715975,52.199339 66.837227,83.954563 82.47212,80.958747 85.467937,65.323853"
           id="sub-alpine-se" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 66.832245,83.990963 53.66065,52.258503 40.484442,83.990963 53.658343,92.92814 66.832245,83.990963"
           id="sub-alpine-s" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 40.496625,84.037396 53.621139,52.285434 21.865915,65.406686 24.861732,81.04158 40.496625,84.037396"
           id="sub-alpine-sw" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 21.788067,65.377483 53.520528,52.205888 21.788067,39.02968 12.85089,52.203583 l 8.937177,13.1739"
           id="sub-alpine-w" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 21.765855,39.000415 53.517817,52.12493 40.396565,20.369705 24.761671,23.365523 21.765855,39.000415"
           id="sub-alpine-nw" />
        <g
           id="g12330-6-9">
          <path
             style="fill:none;stroke:#000000;stroke-width:4;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="m 336.99068,192.86732 -33.77831,49.79112 -11.32277,59.09251 -59.0925,11.32276 -49.79112,33.77831 L 133.21486,313.07371 74.122359,301.75095 62.799592,242.65844 29.021286,192.86732 62.799592,143.07621 74.122359,83.983702 133.21486,72.660935 l 49.79112,-33.778306 49.79112,33.778306 59.0925,11.322767 11.32277,59.092508 z"
             transform="matrix(0.26458334,0,0,0.26458334,5.196561,1.1326555)"
             id="path10681-1-7" />
          <path
             style="fill:none;stroke:#000000;stroke-width:0.79375;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="M 21.812287,65.336035 85.421504,38.988236"
             id="path12237-8-3" />
          <path
             style="fill:none;stroke:#000000;stroke-width:0.79375;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="M 85.421504,65.336035 21.812287,38.988236"
             id="path12239-7-6" />
          <path
             style="fill:none;stroke:#000000;stroke-width:0.79375;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="M 40.442995,83.966745 66.790797,20.357528"
             id="path12241-9-1" />
          <path
             style="fill:none;stroke:#000000;stroke-width:0.79375;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="M 40.442995,20.357528 66.790797,83.966745"
             id="path12243-2-2" />
        </g>
      </g>
      <g
         id="g13171-2"
         transform="matrix(0.77377649,0,0,0.77377649,12.014638,12.743225)"
         style="filter:url(#filter14548)">
        <path
           style="fill:#276fdcff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 40.442995,20.357528 53.614589,52.089988 66.790797,20.357528 53.616896,11.420351 40.442995,20.357528"
           id="alpine-n" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 66.778614,20.311096 53.6541,52.063057 85.409324,38.941805 82.413508,23.306912 66.778614,20.311096"
           id="alpine-ne" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 85.433542,38.900358 53.701082,52.071952 85.433542,65.24816 94.37072,52.074259 85.433542,38.900358"
           id="alpine-e" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 85.467937,65.323853 53.715975,52.199339 66.837227,83.954563 82.47212,80.958747 85.467937,65.323853"
           id="alpine-se" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 66.832245,83.990963 53.66065,52.258503 40.484442,83.990963 53.658343,92.92814 66.832245,83.990963"
           id="alpine-s" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 40.496625,84.037396 53.621139,52.285434 21.865915,65.406686 24.861732,81.04158 40.496625,84.037396"
           id="alpine-sw" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 21.788067,65.377483 53.520528,52.205888 21.788067,39.02968 12.85089,52.203583 l 8.937177,13.1739"
           id="alpine-w" />
        <path
           style="fill:#276fdcff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 21.765855,39.000415 53.517817,52.12493 40.396565,20.369705 24.761671,23.365523 21.765855,39.000415"
           id="alpine-nw" />
        <g
           id="g12330-6">
          <path
             style="fill:none;stroke:#000000;stroke-width:4;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="m 336.99068,192.86732 -33.77831,49.79112 -11.32277,59.09251 -59.0925,11.32276 -49.79112,33.77831 L 133.21486,313.07371 74.122359,301.75095 62.799592,242.65844 29.021286,192.86732 62.799592,143.07621 74.122359,83.983702 133.21486,72.660935 l 49.79112,-33.778306 49.79112,33.778306 59.0925,11.322767 11.32277,59.092508 z"
             transform="matrix(0.26458334,0,0,0.26458334,5.196561,1.1326555)"
             id="path10681-1" />
          <path
             style="fill:none;stroke:#000000;stroke-width:0.79375;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="M 21.812287,65.336035 85.421504,38.988236"
             id="path12237-8" />
          <path
             style="fill:none;stroke:#000000;stroke-width:0.79375;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="M 85.421504,65.336035 21.812287,38.988236"
             id="path12239-7" />
          <path
             style="fill:none;stroke:#000000;stroke-width:0.79375;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="M 40.442995,83.966745 66.790797,20.357528"
             id="path12241-9" />
          <path
             style="fill:none;stroke:#000000;stroke-width:0.79375;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="M 40.442995,20.357528 66.790797,83.966745"
             id="path12243-2" />
        </g>
      </g>
      <g
         id="g13171"
         transform="matrix(0.48794019,0,0,0.48794019,27.401106,27.525533)"
         style="filter:url(#filter14608)">
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 40.442995,20.357528 53.614589,52.089988 66.790797,20.357528 53.616896,11.420351 40.442995,20.357528"
           id="high-alpine-n" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 66.778614,20.311096 53.6541,52.063057 85.409324,38.941805 82.413508,23.306912 66.778614,20.311096"
           id="high-alpine-ne" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 85.433542,38.900358 53.701082,52.071952 85.433542,65.24816 94.37072,52.074259 85.433542,38.900358"
           id="high-alpine-e" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 85.467937,65.323853 53.715975,52.199339 66.837227,83.954563 82.47212,80.958747 85.467937,65.323853"
           id="high-alpine-se" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 66.832245,83.990963 53.66065,52.258503 40.484442,83.990963 53.658343,92.92814 66.832245,83.990963"
           id="high-alpine-s" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 40.496625,84.037396 53.621139,52.285434 21.865915,65.406686 24.861732,81.04158 40.496625,84.037396"
           id="high-alpine-sw" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 21.788067,65.377483 53.520528,52.205888 21.788067,39.02968 12.85089,52.203583 l 8.937177,13.1739"
           id="high-alpine-w" />
        <path
           style="fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
           d="M 21.765855,39.000415 53.517817,52.12493 40.396565,20.369705 24.761671,23.365523 21.765855,39.000415"
           id="high-alpine-nw" />
        <g
           id="g12330">
          <path
             style="fill:none;stroke:#000000;stroke-width:4;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="m 336.99068,192.86732 -33.77831,49.79112 -11.32277,59.09251 -59.0925,11.32276 -49.79112,33.77831 L 133.21486,313.07371 74.122359,301.75095 62.799592,242.65844 29.021286,192.86732 62.799592,143.07621 74.122359,83.983702 133.21486,72.660935 l 49.79112,-33.778306 49.79112,33.778306 59.0925,11.322767 11.32277,59.092508 z"
             transform="matrix(0.26458334,0,0,0.26458334,5.196561,1.1326555)"
             id="path10681" />
          <path
             style="fill:none;stroke:#000000;stroke-width:0.79375;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="M 21.812287,65.336035 85.421504,38.988236"
             id="path12237" />
          <path
             style="fill:none;stroke:#000000;stroke-width:0.79375;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="M 85.421504,65.336035 21.812287,38.988236"
             id="path12239" />
          <path
             style="fill:none;stroke:#000000;stroke-width:0.79375;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="M 40.442995,83.966745 66.790797,20.357528"
             id="path12241" />
          <path
             style="fill:none;stroke:#000000;stroke-width:0.79375;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
             d="M 40.442995,20.357528 66.790797,83.966745"
             id="path12243" />
        </g>
      </g>
    </g>
    <text
       xml:space="preserve"
       style="font-style:normal;font-weight:normal;font-size:10.5833px;line-height:1.25;font-family:sans-serif;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.264583"
       x="50.301849"
       y="8.8709421"
       id="text19597"><tspan
         id="tspan19595"
         style="stroke-width:0.264583"
         x="50.301849"
         y="8.8709421">N</tspan></text>
    <text
       xml:space="preserve"
       style="font-style:normal;font-weight:normal;font-size:10.5833px;line-height:1.25;font-family:sans-serif;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.264583"
       x="50.288094"
       y="104.20834"
       id="text19597-1"><tspan
         id="tspan19595-9"
         style="stroke-width:0.264583"
         x="50.288094"
         y="104.20834">S</tspan></text>
    <text
       xml:space="preserve"
       style="font-style:normal;font-weight:normal;font-size:10.5833px;line-height:1.25;font-family:sans-serif;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.264583"
       x="97.111259"
       y="56.430908"
       id="text19597-1-8"><tspan
         id="tspan19595-9-4"
         style="stroke-width:0.264583"
         x="97.111259"
         y="56.430908">E</tspan></text>
    <text
       xml:space="preserve"
       style="font-style:normal;font-weight:normal;font-size:10.5833px;line-height:1.25;font-family:sans-serif;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.264583"
       x="0.31311145"
       y="56.603809"
       id="text19597-1-4"><tspan
         id="tspan19595-9-7"
         style="stroke-width:0.264583"
         x="0.31311145"
         y="56.603809">W</tspan></text>
    <text
       xml:space="preserve"
       style="font-style:normal;font-weight:normal;font-size:8.94567px;line-height:1.25;font-family:sans-serif;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.223642"
       x="7.3704052"
       y="22.070616"
       id="text19597-9"><tspan
         id="tspan19595-3"
         style="stroke-width:0.223642"
         x="7.3704052"
         y="22.070616">NW</tspan></text>
    <text
       xml:space="preserve"
       style="font-style:normal;font-weight:normal;font-size:8.94567px;line-height:1.25;font-family:sans-serif;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.223642"
       x="84.94886"
       y="21.624905"
       id="text19597-9-8"><tspan
         id="tspan19595-3-4"
         style="stroke-width:0.223642"
         x="84.94886"
         y="21.624905">NE</tspan></text>
    <text
       xml:space="preserve"
       style="font-style:normal;font-weight:normal;font-size:8.94567px;line-height:1.25;font-family:sans-serif;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.223642"
       x="10.837397"
       y="91.201553"
       id="text19597-9-5"><tspan
         id="tspan19595-3-8"
         style="stroke-width:0.223642"
         x="10.837397"
         y="91.201553">SW</tspan></text>
    <text
       xml:space="preserve"
       style="font-style:normal;font-weight:normal;font-size:8.94567px;line-height:1.25;font-family:sans-serif;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.223642"
       x="83.513596"
       y="90.929749"
       id="text19597-9-5-6"><tspan
         id="tspan19595-3-8-2"
         style="stroke-width:0.223642"
         x="83.513596"
         y="90.929749">SE</tspan></text>
  </g>
</svg>

